bug 878786 - relax assertion requiring a loadGroup when the loading document is an SVG-glyph document loaded from a font table. r=bz